--- a/internal/server/embed/assets/style.css
+++ b/internal/server/embed/assets/style.css
@@ -73,7 +73,7 @@ main {
 
 iframe {
     position: absolute;
-    top: 1.9rem;
+    top: 5.2em;
     z-index: -1;
     bottom: 0;
     left: 0;
@@ -81,5 +81,5 @@ iframe {
     border: 0;
     margin: 0;
     width: 100%;
-    height: 100%;
+    height: calc(100% - 5.2em);
 }
